...
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/detailed_market_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_detailed_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_rate_review_white_24dp"
        app:backgroundTint="@color/colorPrimary"
...
                            app:layout_constraintStart_toEndOf="@+id/detailed_family_4"
                            app:layout_constraintTop_toTopOf="@+id/detailed_family"
                            app:srcCompat="@drawable/ic_star_black_24dp" />
            -->

            <Button
                android:id="@+id/button_more_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/label_comment_title"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
...
